v3.6.8 (XXXX-XX-XX)
-------------------

* Fixed a bug in handling of followers which refuse to replicate operations.
  In the case that the follower has simply been dropped in the meantime, we now
  avoid an error reported by the shard leader.

* Fixed issue ES-664: SEARCH vs FILTER lookup performance.
  Consolidation functionality for ArangoSearch view links was able to hit non-
  mergable enormous amount of segments due to improper scheduling logic.

* Turn off upgrade checks in arangod in alpha/beta/preview Enterprise builds,
  too.
  Previously it was already turned off in arangod for Enterprise builds already,
  but only for stable releases and not preview releases.


v3.6.7.1 (2020-10-03)
---------------------

* Fixed a bug in handling of followers which refuse to replicate operations.
  In the case that the follower has simply been dropped in the meantime, we now
  avoid an error reported by the shard leader.

* Make scheduler properly count down the number of working threads in case
  an exception happens in a worker thread.


v3.6.7 (2020-09-18)
-------------------

* Use rclone built from v1.51.0 source with go1.15.2 instead of prebuilt to
  1.51.0.

* Fix undefined behavior when accessing the `/_admin/metrics` API to retrieve
  metrics when the server statistics history bookkeeping was turned off via
  `--server.statistics-history false`. The default value for this option is
  `true`, so the effect is limited to installations which have changed the
  default and are using the API.

* Make the reboot tracker catch failed coordinators, too. Previously the reboot
  tracker was invoked only when a DB server failed or was restarted, and when a
  coordinator was restarted. Now it will also act if a coordinator just fails
  (without restart).

* Implement RebootTracker usage for AQL queries in case of coordinator restarts
  or failures. This will clean up the rest of an AQL query on dbservers more
  quickly and in particular release locks faster.
