@@ -32,7 +32,7 @@ arangodb::basics::ConditionVariable* LogThread::CONDITION = nullptr;
 boost::lockfree::queue<LogMessage*>* LogThread::MESSAGES = nullptr;
 
 LogThread::LogThread(application_features::ApplicationServer& server, std::string const& name)
-    : Thread(server, name), _messages(0) {
+    : Thread(server, name), _messages(16384) {
   MESSAGES = &_messages;
   CONDITION = &_condition;
 }
