@@ -1,6 +1,8 @@
 v3.6.8 (XXXX-XX-XX)
 -------------------
 
+* Optimization of empty append entries
+
 * Fixed a bug in handling of followers which refuse to replicate operations.
   In the case that the follower has simply been dropped in the meantime, we now
   avoid an error reported by the shard leader.
